fix: h1 on mobile and desktop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,11 +39,11 @@ header {
 }
 #menu-box > h1{
   position:absolute;
-  top:15vh;
-  left:33vw;
+  top:8vh;
+  left:30vw;
   color:#ffffff;
   text-decoration: underline overline #de721f;
-  font-size:3.5vh;
+  font-size:2.5vh;
   font-weight:300;
   letter-spacing:0.5rem;
 }
